// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scriptLoadHandler should apply custom func load handler: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	  return Promise.resolve();
+/******/ 	  return [
+/******/ 	    function(p1, p2, p3) {
+/******/ 	      console.log(p3);
+/******/ 	    }
+/******/ 	  ].reduce(function(promise, strategy) {
+/******/ 	    return promise.then(function(result) {
+/******/ 	      return strategy(installedChunks, chunkId, result);
+/******/ 	    });
+/******/ 	  }, Promise.resolve());
"
`;

exports[`scriptLoadHandler should apply custom plain load handler: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	  return Promise.resolve();
+/******/ 	  return [
+/******/ 	    function(installedChunks, chunkId, result) {
+/******/ 	      console.log(result);
+/******/ 	    }
+/******/ 	  ].reduce(function(promise, strategy) {
+/******/ 	    return promise.then(function(result) {
+/******/ 	      return strategy(installedChunks, chunkId, result);
+/******/ 	    });
+/******/ 	  }, Promise.resolve());
"
`;

exports[`scriptLoadHandler should apply multy load handlers: runtime.js 1`] = `
"Index: runtime.js
===================================================================
--- runtime.js	
+++ runtime.js	
@@ Change 1 @@
-/******/ 	  return Promise.resolve();
+/******/ 	  return [
+/******/ 	    function(installedChunks, chunkId, result) {
+/******/ 	      console.log(result);
+/******/ 	    },
+/******/ 	    function(p1, p2, p3) {
+/******/ 	      console.log(p3);
+/******/ 	    }
+/******/ 	  ].reduce(function(promise, strategy) {
+/******/ 	    return promise.then(function(result) {
+/******/ 	      return strategy(installedChunks, chunkId, result);
+/******/ 	    });
+/******/ 	  }, Promise.resolve());
"
`;
